--- a/环境搭建.md
+++ b/环境搭建.md
@@ -1,1 +1,19 @@
+## 1. Java发展史
+
+1. Creator: James Gosling
+2. 不会感染病毒，因为JDK有JVM，像盒子一样
+3. 不能控制硬件，曾经的缺点，现在的优点（安全）
+
+## 2. Java的优点
+
+1. 简单
+(继承了C，C++的语言风格）
+(抛弃了header file, pointer等）
+(库）
+
+面向对象的语言（oo）：可复制性很强
+一种与平台无关的语言
+健壮性和安全性
+多线程
+
 
