--- a/环境搭建.md
+++ b/环境搭建.md
@@ -7,8 +7,8 @@
 ## 2. Java的优点
 
 1. 简单<br>
-(继承了C，C++的语言风格）
-(抛弃了header file, pointer等）
+(继承了C，C++的语言风格）\
+(抛弃了header file, pointer等）\
 (库）
 
 面向对象的语言（oo）：可复制性很强
