--- a/环境搭建.md
+++ b/环境搭建.md
@@ -6,14 +6,19 @@
 
 ## 2. Java的优点
 
-#### 1. 简单<br>
+#### 1.简单<br>
 (继承了C，C++的语言风格）\
 (抛弃了header file, pointer等）\
 (库）
 
-面向对象的语言（oo）：可复制性很强
-一种与平台无关的语言
-健壮性和安全性
-多线程
+#### 2.面向对象
+(万物皆对象, write a class for everything）
 
+#### 3.平台无关性
+(不同的平台，有不同的虚拟机）\
+(.java -> . class -> JVM for difference platform)
+
+#### 4、健壮性和安全性
+(删除了pointer, delete释放内存等问题）\
+(通过java的安全体系架构来确保java代码的安全性)
 
